Updated style css to have variable colors and fonts - we only have to change it in one place for future updates. Nav menu correctly fades in and out with a tangible delay of .1s. Hamburger placeholder is on left where we want it. Need to add a collapse to the hamburger action instead of an immediate change so it appears more organic.

--- a/uhx3/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/uhx3/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -11,20 +11,21 @@
 }
 
 .burger-shield{
-  justify-content: left;
+  margin-right: auto;
   padding-top: 4em;
   padding-left: 1em;
   display: flex;
   font-size: 25px;
 }
 
-a {
+button {
   padding-right: 15px;
-  opacity: 0.7;
+  opacity: 0.6;
 }
 
-a:hover {
+button:hover {
   opacity: 1.0;
+  transition-delay: .2s;
 }
 
 #nav-button {
